SimpleSeer/static/app/styles/toolbar.less
#toolbar {
  float: left;
  height: 100%;
  width: 32px;
  background: url("../img/MT_666666.png") repeat;
  box-shadow: 1px 0px 0px #000, inset -1px 0px 5px rgba(0, 0, 0, .3);
  overflow-y: auto;
  z-index: 1;
  position: relative;  

  #toolbar-toggle {
    height: 11px; 
    cursor: pointer;
    border-top: 1px solid #404040;
    border-bottom: 1px solid black;
    background:
      url("../img/arrow_expand_h_rev.png") no-repeat center center,
      url("../img/MT_222222.png") repeat;
  }   

  .toolset {
    .set {
      background: url("../img/MT_999999.png") repeat; 
      border-top: 1px solid #B9BCC3;
      border-bottom: 3px solid #1B1C1E;

      &.blue {
        border-top-color: #0090CD;
        box-shadow: inset 0px 4px 0px #006B9D;
      }

      &.yellow {
        border-top-color: #C79800;
        box-shadow: inset 0px 4px 0px #917100;
      }

      &.red {
        border-top-color: #CB3500;
        box-shadow: inset 0px 4px 0px #952500;
      }        
     

      &:first-child { border-top: 1px solid transparent; }
      &:last-child { border-bottom: 1px solid #2D2F32; margin-bottom: 0px; }

      .item {
        width: 100%;
        height: 31px;
        position: relative;
        cursor: pointer;

        border-bottom: 1px solid #62656B;
        border-top: 1px solid #C8CBD0;

        &:first-child { border-top: none; }
        &:last-child { border-bottom: none; }
        
        .shortcut {
          position: absolute;
          top: 0; left: 0;
          width: 100%;
          height: 100%;
          padding-top: 5px;
          text-align: center;
          border-radius: 2px;
          cursor: pointer;

          background: transparent no-repeat center center;

          img { cursor: pointer; }
        }          
      }      
    }   
  }
}

#toolbar.expanded {
  width: 239px;

  #toolbar-toggle {
    background:
      url("../img/arrow_expand_h.png") no-repeat 228px center,
      url("../img/MT_222222.png") repeat;  
  }
  
  .toolset {
    .set {
      border-top: none;

      .item, .item:last-child {
        width: 100%;
        height: auto;
        background: none !important;
        margin: 0 !important;
        padding: 0 !important;

        border-color: transparent;

        .shortcut { display: none; }
      }      
    }
  }
  
  .controlPane {
    display: block;
    left: 0px;
    top: 0px;

    border: none;
    border-radius: 0px;
    box-shadow: none;
    
    &:before { background: none; }
  }
}

#toolbar.expanded + #content {
  padding-left: 240px;
}

